# gutd

./: .gitignore  BUILD.md  CI_CD.md  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  IMPLEMENTATION.md  LICENSE  METRICS.md  Makefile  README.md  SECURITY.md  VERSIONING.md  build-musl.sh  build.rs  gutd.conf  test.conf
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_CHECKLIST.md  WORKFLOWS.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark-releases.yml  build.yml  build.yml.example  ci.yml  docker-test.yml  ethicalcheck.yml  integration-test-wgobfs.yml  integration-test.yml  ndpi-evasion.yml  relay-test.yml  release.yml  run-test-integration.yml  tc-check.yml  unit-tests.yml  windows-test.yml
doc/: architecture.md  configuration.md  running.md  testing.md  troubleshooting.md
docker/: Dockerfile  Dockerfile.cross  Dockerfile.relay-test  Dockerfile.run  Dockerfile.x86_64  README.md  build-multiarch.sh  docker-compose.example.yml  make-ros-tar.sh
examples/: wireguard-relay-simple.sh  wireguard-relay.md
src/: config.rs  crypto.rs  installer.rs  lib.rs  main.rs  metrics.rs  netlink.rs  reload.rs  tun.rs  userspace.rs
src/bpf/: Makefile  gut_common.h  tc_gut_egress.bpf.c  xdp_dispatcher.bpf.c  xdp_gut_ingress.bpf.c
src/proto/: base64.rs  feistel.rs  mask_balanced.rs  mod.rs  quic.rs  sip.rs  syslog.rs
src/tc/: loader.rs  maps.rs  mod.rs
src/tc/bpf/: Makefile  dummy.c  gut_common.h  tc_gut_egress.bpf.c  xdp_gut_ingress.bpf.c
tests/: INTEGRATION_TESTS.md  README.md  check-deps.sh  decrypt_sni.py  docker-relay-test.sh  docker-test.sh  integration-wg.sh  integration_tests.rs  metrics_perf.rs  probe_quic.py  test_anti_probing.sh  test_cross_compat.sh  test_ndpi_all_modes.sh  test_ndpi_evasion.sh  test_openwrt.sh  test_relay_dnat.sh  test_userspace_compat.sh
